add pr review m2 alias

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -75,6 +75,17 @@
 
     stap = stash pop
 
+    pr = "!f(){ git fetch upstream pull/$1/head:pr/$1; };f"
+    
+    review ="!f(){ git checkout cn && git pr $1 && git checkout cn && git pull --rebase upstream cn && git checkout pr/$1 && git rebase cn; };f"
+    
+    # git m2 sourceBrance targetBranch mergeMsg
+    # too danger to use !
+    #m2="!f(){ git checkout $1 && git pull && git ss && git checkout $2 && git pull && git ss && git merge -m $3 $1 && git ss; };f"
+   
+    #git m2 targetBranch mergeMsg
+    m2="!f(){  currentBranch=$(git rev-parse --abbrev-ref HEAD); git checkout $1 && git pull && git ss && git merge -m $2 $currentBranch;git ss; };f"
+
 [gui]
 	
 	encoding = utf-8
