--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -75,9 +75,7 @@
 
     stap = stash pop
 
-    pr = "!f(){ git fetch upstream pull/$1/head:pr/$1; };f"
-    
-    review ="!f(){ git checkout cn && git pr $1 && git checkout cn && git pull --rebase upstream cn && git checkout pr/$1 && git rebase cn; };f"
+    pr = "! f() { upstream=$1;pr=$2;git fetch $upstream pull/$pr/head:pr-$pr;git checkout pr-$pr; }; f "
     
     # git m2 sourceBrance targetBranch mergeMsg
     # too danger to use !
