--- a/iTerm2/com.googlecode.iterm2.plist
+++ b/iTerm2/com.googlecode.iterm2.plist
@@ -29153,7 +29153,7 @@ Clear Buffer</string>
 	<key>NSWindow Frame SharedPreferences</key>
 	<string>695 457 918 514 0 0 1920 1080 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 0 910 740 0 0 1440 900 </string>
+	<string>0 0 910 740 0 0 1440 877 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -29785,11 +29785,11 @@ Clear Buffer</string>
 			<key>Name</key>
 			<string>Default</string>
 			<key>Non Ascii Font</key>
-			<string>Hack-BoldItalic 16</string>
+			<string>JetBrainsMono-BoldItalic 16</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>Hack-Bold 19</string>
+			<string>JetBrainsMono-Bold 19</string>
 			<key>Only The Default BG Color Uses Transparency</key>
 			<false/>
 			<key>Open Toolbelt</key>
@@ -31444,8 +31444,20 @@ Clear Buffer</string>
 		<string>3.3.git.5d707a6771</string>
 		<string>3.3.2</string>
 	</array>
+	<key>NoSyncBFPRecents</key>
+	<array>
+		<string>JetBrains Mono</string>
+		<string>Hack</string>
+	</array>
 	<key>NoSyncCommandHistoryHasEverBeenUsed</key>
 	<true/>
+	<key>NoSyncFrame_SessionsPreferences</key>
+	<dict>
+		<key>screenFrame</key>
+		<string>{{0, 0}, {1440, 900}}</string>
+		<key>topLeft</key>
+		<string>{417, 804}</string>
+	</dict>
 	<key>NoSyncFrame_SharedPreferences</key>
 	<dict>
 		<key>screenFrame</key>
@@ -31468,7 +31480,7 @@ Clear Buffer</string>
 	<key>NoSyncLastTipTime</key>
 	<real>592726378.71779501</real>
 	<key>NoSyncLaunchExperienceControllerRunCount</key>
-	<integer>75</integer>
+	<integer>91</integer>
 	<key>NoSyncNextAnnoyanceTime</key>
 	<real>587353000.20281994</real>
 	<key>NoSyncOnboardingWindowHasBeenShown</key>
@@ -32295,7 +32307,7 @@ Clear Buffer</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2020-02-19T09:15:47Z</date>
+	<date>2020-04-16T02:16:55Z</date>
 	<key>SUUpdateRelaunchingMarker</key>
 	<false/>
 	<key>SavePasteHistory</key>
