--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -2,14 +2,17 @@
 [core]
 		
 	autocrlf = false
-
 	ignorecase = false
+    excludesfile = ~/.gitignore_global
 
 [user]
 	
-	email = xxx
+	email = xxx.com
 
-	name = songgl
+	name = xxx
+
+[commit]
+    template = ~/.git/commit-msg.template
 
 [color]
         
@@ -51,13 +54,13 @@
 
 [alias] 
         
+    pr = "! f() { upstream=$1;pr=$2;git fetch $upstream pull/$pr/head:pr-$pr;git checkout pr-$pr; }; f "
+
 	co = commit 
         
 	st = status -b
         
 	ch = checkout 
-
-    cp = cherry-pick
         
 	br = branch -vv
         
@@ -75,19 +78,23 @@
 
     stap = stash pop
 
-    pr = "! f() { upstream=$1;pr=$2;git fetch $upstream pull/$pr/head:pr-$pr;git checkout pr-$pr; }; f "
-    
-    # git m2 sourceBrance targetBranch mergeMsg
-    # too danger to use !
-    #m2="!f(){ git checkout $1 && git pull && git ss && git checkout $2 && git pull && git ss && git merge -m $3 $1 && git ss; };f"
-   
-    #git m2 targetBranch mergeMsg
-    m2="!f(){  currentBranch=$(git rev-parse --abbrev-ref HEAD); git checkout $1 && git pull && git ss && git merge -m $2 $currentBranch;git ss; };f"
+    stas = stash show
+
+    stasp = stash show -p
 
 [gui]
 	
 	encoding = utf-8
 [push]
 	default = simple
-[submodule]
-	recurse = true
+[http]
+[https]
+
+[url "git@gitlab.qiniu.io:"]
+	insteadOf = https://gitlab.qiniu.io/
+[merge]
+#	conflictstyle = diff3
+[url "ssh://git@github.com/"]
+	insteadOf = https://github.com/
+[url "git@github.com:qbox/"]
+	insteadOf = https://github.com/qbox/
