--- a/iTerm2/com.googlecode.iterm2.plist
+++ b/iTerm2/com.googlecode.iterm2.plist
@@ -29153,7 +29153,7 @@ Clear Buffer</string>
 	<key>NSWindow Frame SharedPreferences</key>
 	<string>695 457 918 514 0 0 1920 1080 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 0 910 740 0 0 1440 877 </string>
+	<string>0 0 910 770 0 0 1920 1080 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -29386,6 +29386,8 @@ Clear Buffer</string>
 			<integer>100</integer>
 			<key>Command</key>
 			<string></string>
+			<key>Cursor Boost</key>
+			<real>0.30561797752808989</real>
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
@@ -29435,19 +29437,23 @@ Clear Buffer</string>
 			<false/>
 			<key>Foreground Color</key>
 			<dict>
+				<key>Alpha Component</key>
+				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.76935554418464236</real>
+				<key>Color Space</key>
+				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.77406256676134666</real>
 				<key>Red Component</key>
-				<real>0.73333334922790527</real>
+				<real>0.7969970703125</real>
 			</dict>
 			<key>Guid</key>
 			<string>E026366B-85F0-49B4-8DD6-60499362E658</string>
 			<key>Hide After Opening</key>
 			<false/>
 			<key>Horizontal Spacing</key>
-			<real>0.76000000000000001</real>
+			<real>0.80000000000000004</real>
 			<key>Idle Code</key>
 			<integer>0</integer>
 			<key>Initial Text</key>
@@ -29789,7 +29795,7 @@ Clear Buffer</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>JetBrainsMono-Bold 19</string>
+			<string>JetBrainsMono-Bold 21</string>
 			<key>Only The Default BG Color Uses Transparency</key>
 			<false/>
 			<key>Open Toolbelt</key>
@@ -31434,6 +31440,7 @@ Clear Buffer</string>
 	<key>NoSyncAllAppVersions</key>
 	<array>
 		<string>3.3.6</string>
+		<string>3.3.12</string>
 		<string>3.3.4</string>
 		<string>3.3.1</string>
 		<string>3.3.3</string>
@@ -31446,6 +31453,7 @@ Clear Buffer</string>
 	</array>
 	<key>NoSyncBFPRecents</key>
 	<array>
+		<string>WenQuanYi Micro Hei Mono</string>
 		<string>JetBrains Mono</string>
 		<string>Hack</string>
 	</array>
@@ -31461,9 +31469,9 @@ Clear Buffer</string>
 	<key>NoSyncFrame_SharedPreferences</key>
 	<dict>
 		<key>screenFrame</key>
-		<string>{{0, 0}, {1440, 900}}</string>
+		<string>{{0, 0}, {1920, 1080}}</string>
 		<key>topLeft</key>
-		<string>{300, 630}</string>
+		<string>{860, 815}</string>
 	</dict>
 	<key>NoSyncHaveRequestedFullDiskAccess</key>
 	<true/>
@@ -31480,7 +31488,11 @@ Clear Buffer</string>
 	<key>NoSyncLastTipTime</key>
 	<real>592726378.71779501</real>
 	<key>NoSyncLaunchExperienceControllerRunCount</key>
-	<integer>91</integer>
+	<integer>135</integer>
+	<key>NoSyncNeverRemindPrefsChangesLostForFile</key>
+	<true/>
+	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
+	<integer>0</integer>
 	<key>NoSyncNextAnnoyanceTime</key>
 	<real>587353000.20281994</real>
 	<key>NoSyncOnboardingWindowHasBeenShown</key>
@@ -32307,7 +32319,7 @@ Clear Buffer</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2020-04-16T02:16:55Z</date>
+	<date>2020-10-16T02:44:59Z</date>
 	<key>SUUpdateRelaunchingMarker</key>
 	<false/>
 	<key>SavePasteHistory</key>
@@ -32375,9 +32387,9 @@ Clear Buffer</string>
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.3.9</string>
+	<string>3.3.12</string>
 	<key>kCPKSelectionViewPreferredModeKey</key>
-	<integer>0</integer>
+	<integer>2</integer>
 	<key>kCPKSelectionViewShowHSBTextFieldsKey</key>
 	<false/>
 </dict>
